--- a/scss/_image-sizes.scss
+++ b/scss/_image-sizes.scss
@@ -1,8 +1,13 @@
 $image-sizes: (
   "bg.jpg": (width: 1920, height: 1277),
-  "bg_main.jpg": (width: 2000, height: 1500),
+  "bg_sp.jpg": (width: 750, height: 1334),
   "flower.svg": (width: 148, height: 148),
   "ico_flower.svg": (width: 151, height: 151),
-  "title.svg": (width: 560, height: 420),
-  "_bg.png": (width: 1920, height: 1080)
+  "pic_ss01.jpg": (width: 1900, height: 990),
+  "pic_ss02.jpg": (width: 1900, height: 990),
+  "pic_ss03.jpg": (width: 1900, height: 990),
+  "pic_ss04.jpg": (width: 1900, height: 990),
+  "pic_ss05.jpg": (width: 1900, height: 990),
+  "pic_ss06.jpg": (width: 1900, height: 990),
+  "title.svg": (width: 560, height: 420)
 );
