--- a/css/main.css
+++ b/css/main.css
@@ -121,6 +121,7 @@ body {
 }
 @media (max-width: 768px) {
   body {
+    background-attachment: scroll;
     background-image: url("/images/bg_sp.jpg");
     background-position: center center;
     background-repeat: no-repeat;
@@ -157,9 +158,10 @@ body {
   height: 120px;
   background-size: contain;
   opacity: 0;
+  animation-name: fall;
+  animation-timing-function: linear;
+  animation-iteration-count: 1;
   transform-origin: center center;
-  animation-name: fall-and-rotate;
-  animation-iteration-count: infinite;
 }
 @media (max-width: 768px) {
   .flower {
@@ -168,7 +170,7 @@ body {
   }
 }
 
-@keyframes fall-and-rotate {
+@keyframes fall {
   0% {
     transform: translateY(-100px) rotate(0deg);
     opacity: 0;
