--- a/css/main.css
+++ b/css/main.css
@@ -121,16 +121,7 @@ body {
 }
 @media (max-width: 768px) {
   body {
-    background-attachment: scroll;
-    background-image: url("/images/bg_sp.jpg");
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 48.828vw;
-    height: 86.849vw;
-    max-width: 100vw;
-    aspect-ratio: 0.562;
-    background-position: 0 0;
+    background: none;
     width: 100vw;
     height: auto;
   }
@@ -143,7 +134,7 @@ body {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  z-index: -1;
+  z-index: 0;
 }
 @media (max-width: 768px) {
   .flower-container {
@@ -183,10 +174,24 @@ body {
     opacity: 0;
   }
 }
-header {
-  position: relative;
-  width: 100vw;
-  height: auto;
+@media (max-width: 768px) {
+  header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-image: url("/images/bg_sp.jpg");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 48.828vw;
+    height: 86.849vw;
+    max-width: 100vw;
+    aspect-ratio: 0.562;
+    background-position: 0 0;
+    width: 100vw;
+    height: auto;
+    z-index: -1;
+  }
 }
 header h1 {
   position: fixed;
