--- a/scss/main.scss
+++ b/scss/main.scss
@@ -74,9 +74,9 @@ body {
   //   @include rsp_bg_img("bg.jpg", $rateM);
   // }
   @media (max-width: $break-sp) {
-    background-attachment: scroll;
-    @include rsp_bg_img("bg_sp.jpg", $rateS);
-    background-position: 0 0;
+    background: none;
+    // @include rsp_bg_img("bg_sp.jpg", $rateS);
+    // background-position: 0 0;
     width: 100vw;
     height: auto;
   }
@@ -91,7 +91,7 @@ body {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  z-index: -1;
+  z-index: 0;
   // @media (max-width: $break-tb) {
   //   left: rate(670, $rateM);
   // }
@@ -134,9 +134,17 @@ body {
 // header
 //-------------------------------
 header {
-  position: relative;
-  width: 100vw;
-  height: auto;
+
+  @media(max-width: $break-sp) {
+    position: fixed;
+    top: 0;
+    left: 0;
+    @include rsp_bg_img("bg_sp.jpg", $rateS);
+    background-position: 0 0;
+    width: 100vw;
+    height: auto;
+    z-index: -1;
+  }
 
   h1 {
     position: fixed;
